--- a/index.html
+++ b/index.html
@@ -1,11 +1,64 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <link rel="stylesheet" href="index.css">
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
-    <div></div>
-  </body>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Website Project: HTML</title>
+    <script defer src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
+    <script defer src="js/index.js"></script>
+    <link rel="stylesheet" href="styles/stylesheet.css">
+</head>
+
+<body>
+
+    <header>
+        <div>
+            <h1>Kasama Filipino Kitchen</h1>
+            <img src="images/kasama elephant transparent logo.png" alt="Kasama Logo" width="300" height="300"
+                class="center">
+        </div>
+    </header>
+
+    <nav>
+        <a class="button" style="background-color:#74a2ad;">Home</a>
+        <a class="button" style="background-color:#cc5037;">Menu</a>
+        <a class="button" style="background-color:#5b2812">Contact</a>
+        <a class="button" style="background-color:#1d3d1d">Locations</a>
+    </nav>
+
+    <img src="images/kasama inspo copy.webp" alt="kasamaimage" width="100%" class="kasamaimage">
+
+    <div class="background-color-brown">
+        <h2>"Where every dish tells a <br>story, one bite at a time"</h2>
+    </div>
+    <div class="background-color-green">
+        <h3>Our Story:</h3>
+        <h4> In the heart of Kasama Filipino Kitchen, our friendly earthy tones intertwine with a modern elegance,
+            creating a space where families come together to savor tradition with a contemporary twist.</h4>
+    </div>
+
+    <img src="images/kasamalogo copy.png" alt="Kasama logo" class="center" width="300">
+    <footer>
+        <div class="full-width social-icons">
+            <a href="https://www.instagram.com/">
+                <img src="images/instagram logo.png" alt="social-icons" width="75" style="margin-right:10px;">
+            </a>
+            <a href="https://www.facebook.com/">
+                <img src="images/facebook transparent logo.png" alt="social-icons=" width="75"
+                    style="margin-right:10px;">
+            </a>
+            <a
+                href="https://login.yahoo.com/?.src=ym&lang=en-US&done=https%3A%2F%2Fmail.yahoo.com%2F%3Fguce_referrer%3DaHR0cHM6Ly93d3cuZ29vZ2xlLmNvbS8%26guce_referrer_sig%3DAQAAACxuNqsHxoDGPqb0WgOjHqHe670r4E9eUTWBlTV-MGznQcS1PF7x6jrLJIBjSQlPxv2sH7I1iQclEZ9lHF5rW5EFHooov1SFr47oJuB2YIKzBQFikjJgiuWpNDlluAdvNipXOd4bVtd3Vqqhx85N39VPWb21qE3IZTm2sUKQKqR_">
+                <img src="images/email transparent logo.png" alt="social-icons" width="75">
+            </a>
+            <img src="images/creative commons license logo.png" alt="creative commons" width="25">
+            <h5>2024</h5>
+        </div>
+        </div>
+        </div>
+    </footer>
+</body>
+
 </html>
